[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

